# python-docs-theme

./: .babel.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  babel_runner.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  zizmor.yml
.github/workflows/: documentation-links.yml  lint.yml  pypi-package.yml  tests.yml
python_docs_theme/: __init__.py  footerdonate.html  layout.html  theme.conf  theme.toml
python_docs_theme/locale/ar/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/de/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/el/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/es/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/fr/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/id/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/ja/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/ko/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/pl/LC_MESSAGES/: python-docs-theme.mo  python-docs-theme.po
python_docs_theme/locale/pt/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/pt_BR/LC_MESSAGES/: python-docs-theme.po  python-docs-themepot_pt_BR.po
python_docs_theme/locale/ro/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/ru/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/sv/LC_MESSAGES/: python-docs-theme.po  python-docs-themepot_sv.po
python_docs_theme/locale/ta/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/tr/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/vi/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/zh_CN/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locale/zh_TW/LC_MESSAGES/: python-docs-theme.po
python_docs_theme/locales/pl_PL/LC_MESSAGES/: messages.mo  messages.po
python_docs_theme/locales/pt_BR/LC_MESSAGES/: messages.po
python_docs_theme/static/: copybutton.js  menu.js  pydoctheme.css  pydoctheme_dark.css  search-focus.js  sidebar-resizer.js  sidebar.js  sidebar.js_t  smooth.js  switchers.js  themetoggle.js
